--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "mongoose": "^5.10.7",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
