--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
     "mongoose": "^5.10.7",
     "nodemailer": "^6.4.13",
     "nodemailer-sendgrid-transport": "^0.2.0",
