--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.7",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.13",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^8.3.0"
