--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
+    "helmet": "^4.1.1",
     "mongoose": "^5.10.7",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.13",
